src/objects/UCLA_PTSD_DSM_V__c.object
<CustomObject>
    <description>new object</description>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>aUCLA_PTSD_DSM_V</relationshipLabel>
        <relationshipName>aUCLA_PTSD_DSM_V</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UC_CD2_OTHER_Describe__c</fullName>
        <inlineHelpText>Describe</inlineHelpText>
        <label>Describe:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UC_Category_B_Present__c</fullName>
        <formula>( if(value(text( UC_Reaction_Q18__c )) &gt;= 3, 1, 0) 
+ if(value(text( UC_Reaction_Q10__c )) &gt;= 2, 1, 0) 
+ if(value(text( UC_Reaction_Q05__c )) &gt;= 3, 1, 0) 
+ if(value(text( UC_Reaction_Q11__c )) &gt;= 3, 1, 0)
+ if(value(text( UC_Reaction_Q14__c )) &gt;= 3, 1, 0)) &gt;= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Category B Present</inlineHelpText>
        <label>Category B Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UC_Category_C_Present__c</fullName>
        <formula>( if(value(text( UC_Reaction_Q13__c )) &gt;= 3, 1, 0) 
+ if(value(text( UC_Reaction_Q03__c )) &gt;= 3, 1, 0)) &gt;= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category C Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UC_Category_D_Present__c</fullName>
        <formula>( if(value(text( UC_Reaction_Q23__c )) &gt;= 3, 1, 0) 
+ if( UC_Reaction_D2__c &gt;= 2, 1, 0) 
+ if( UC_Reaction_D3__c &gt;= 3, 1, 0) 
+ if( UC_Reaction_D4__c &gt;= 3, 1, 0)
+ if(value(text( UC_Reaction_Q07__c )) &gt;= 3, 1, 0)
+ if(value(text( UC_Reaction_Q17__c )) &gt;= 3, 1, 0)
+ if(value(text( UC_Reaction_Q12__c )) &gt;= 3, 1, 0)
) &gt;= 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category D Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UC_Category_E_Present__c</fullName>
        <formula>( if(value(text( UC_Reaction_Q04__c )) &gt;= 2, 1, 0) 
+ if(value(text( UC_Reaction_Q20__c )) &gt;= 3, 1, 0) 
+ if(value(text( UC_Reaction_Q26__c )) &gt;= 2, 1, 0) 
+ if(value(text( UC_Reaction_Q01__c )) &gt;= 3, 1, 0)
+ if(value(text( UC_Reaction_Q24__c )) &gt;= 3, 1, 0) 
+ if(value(text( UC_Reaction_Q08__c )) &gt;= 3, 1, 0)
+ if(value(text( UC_Reaction_Q21__c )) &gt;= 3, 1, 0)) &gt;= 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category E Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UC_Clincial_Development_Describe__c</fullName>
        <label>Clincial Development.Describe:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_Developmental_Other__c</fullName>
        <label>Other</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_Developmental_Q1__c</fullName>
        <inlineHelpText>Do these reactions (thoughts and feelings) make it harder for you to do important things that other kids your age are doing?</inlineHelpText>
        <label>CDv1.Harder to do important things</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_Distress_Q1__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Clinically Significant Distress: do these reactions(thoughts and feelings) bother or upset you a lot?</inlineHelpText>
        <label>Clinically Significant Distress:</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_Home_Describe__c</fullName>
        <label>Describe:</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_Home_Q1__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Do these reactions (thoughts and feelings) make it harder for you to get along with people at home?</inlineHelpText>
        <label>CH1.Make it harder at home</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_Home_Q2__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Do these reactions (thoughts and feelings) get you into trouble at home?</inlineHelpText>
        <label>CH2.Get into trouble at home</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_Home_Q3__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Do these reactions (thoughts and feelings) cause some other problem at home?</inlineHelpText>
        <label>CH3.Cause problem at home</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_Peer_Describe__c</fullName>
        <inlineHelpText>Describe again</inlineHelpText>
        <label>Describe:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_Peer_Q1__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Do these reactions (thoughts and feelings) make it harder for you to get along with your friends or make new friends?</inlineHelpText>
        <label>CP1.Harder to get along with friends</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_School_Describe__c</fullName>
        <label>Describe:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_School_Q1__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Do these reactions (thoughts and feelings) make it harder for you to do well in school?</inlineHelpText>
        <label>CS1.Harder to do well at school</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Clinical_School_Q2__c</fullName>
        <inlineHelpText>Do these reactions (thoughts and feelings) cause other problems at school?</inlineHelpText>
        <label>CS2.Cause other problems at school?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_PTSD_RI__c</fullName>
        <label>PTSD RI</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_R04_I_get_upset_easily__c</fullName>
        <inlineHelpText>Reaction_Q4_arguments_or_fights__c</inlineHelpText>
        <label>R04:I get upset easily</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_A1__c</fullName>
        <formula>MAX(VALUE(TEXT(UC_Reaction_Q28__c)),VALUE(TEXT(UC_Reaction_Q29__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction A1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_A2__c</fullName>
        <formula>MAX(VALUE(TEXT(UC_Reaction_Q30__c)),VALUE(TEXT(UC_Reaction_Q31__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction A2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_Category_B_Sum__c</fullName>
        <formula>(VALUE(TEXT(UC_Reaction_Q18__c)) + VALUE(TEXT(UC_Reaction_Q10__c))
+ VALUE(TEXT(UC_Reaction_Q05__c)) + VALUE(TEXT(UC_Reaction_Q11__c))
+ VALUE(TEXT(UC_Reaction_Q14__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction Category B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_Category_C_Sum__c</fullName>
        <formula>(VALUE(TEXT(UC_Reaction_Q13__c)) + VALUE(TEXT(UC_Reaction_Q03__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction Category C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_Category_D_Sum__c</fullName>
        <formula>(VALUE(TEXT(UC_Reaction_Q23__c)) + UC_Reaction_D2__c + UC_Reaction_D3__c + UC_Reaction_D4__c)
+ VALUE(TEXT(UC_Reaction_Q07__c)) + VALUE(TEXT(UC_Reaction_Q17__c))
+ VALUE(TEXT(UC_Reaction_Q12__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction Category D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_Category_E_Sum__c</fullName>
        <formula>(VALUE(TEXT(UC_Reaction_Q04__c)) + UC_Reaction_E2__c + 
+ VALUE(TEXT(UC_Reaction_Q01__c)) + VALUE(TEXT(UC_Reaction_Q24__c))
+ VALUE(TEXT(UC_Reaction_Q08__c))+ VALUE(TEXT(UC_Reaction_Q21__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction Category E</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_D2__c</fullName>
        <formula>MAX(VALUE(TEXT(UC_Reaction_Q02__c)),VALUE(TEXT(UC_Reaction_Q09__c)),VALUE(TEXT(UC_Reaction_Q16__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction D2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_D3__c</fullName>
        <formula>MAX(VALUE(TEXT(UC_Reaction_Q15__c)),VALUE(TEXT(UC_Reaction_Q19__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction D3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_D4__c</fullName>
        <formula>MAX(VALUE(TEXT(UC_Reaction_Q06__c)),VALUE(TEXT(UC_Reaction_Q22__c)),VALUE(TEXT(UC_Reaction_Q25__c)),VALUE(TEXT(UC_Reaction_Q27__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction D4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_E2__c</fullName>
        <formula>MAX(VALUE(TEXT(UC_Reaction_Q20__c)),VALUE(TEXT(UC_Reaction_Q20__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reaction E2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_Q01__c</fullName>
        <inlineHelpText>I am on the lookout for danger or things that I am afraid of (like looking over my shoulder even when nothing is there).</inlineHelpText>
        <label>R01:I am on the lookout for danger</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_Q02__c</fullName>
        <inlineHelpText>I have thoughts like &apos;I am bad&apos;.</inlineHelpText>
        <label>R02:I have thoughts like “I am bad.”</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Reaction_Q03__c</fullName>
        <inlineHelpText>I try to stay away from people, places, or things that remind me about what happened.</inlineHelpText>
        <label>R03:Try to stay away from people</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Age_Impacted__c</fullName>
        <inlineHelpText>About how old were you when this bad thing happened?</inlineHelpText>
        <label>How old when this bad thing happened?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Clinician_Description__c</fullName>
        <inlineHelpText>Clinician: Provide a brief description of what is most bothersome now (if different from #1 above):</inlineHelpText>
        <label>What is most bothersome now</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Most_Impacted_By__c</fullName>
        <label>Which one BOTHERS YOU THE MOST?:</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q01_History__c</fullName>
        <label>Provide brief description of what happen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q02_disaster__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Were you in a disaster, like an earthquake, wildfire, hurricane, tornado or flood?</inlineHelpText>
        <label>Were you in a disaster?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q03_accident__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Were you in a bad accident, like a serious car accident or fall?</inlineHelpText>
        <label>Were you in a bad accident?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q04_war__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Were you in a place where a war was going on around you?</inlineHelpText>
        <label>A war was going on around you</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q05_Hit_hard__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Were you hit, punched, or kicked very hard at home? (DO NOT INCLUDE play fighting between brothers and sisters.)?</inlineHelpText>
        <label>Punched or kicked at home</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q06_family_member__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Did you see a family member being hit, punched or kicked very hard at home.? (DO NOT INCLUDE play fighting between brothers and sister)?</inlineHelpText>
        <label>6. Family member hit or kicked</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q07_school__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Were you beaten up, shot at, or threatened to be hurt badly in your school, neighborhood or town?</inlineHelpText>
        <label>7. Beaten up at school?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q08_someone_beaten__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Did you see someone who was beaten up, shot at or killed?</inlineHelpText>
        <label>8. Someone beaten shot or killed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q09_dead_body__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Did you see a dead body (do not include funerals)?</inlineHelpText>
        <label>9. Did you see a dead body?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q10_touch__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Did someone touch your private parts when you did not want them to? (DO NOT INCLUDE visits to the doctor.)?</inlineHelpText>
        <label>10. Touched your private parts</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q11_loved_one__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Did you see or hear about the violent death or serious injury of a loved one or friend?</inlineHelpText>
        <label>11. Death or injury of a loved one</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q12_medical_treatment__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Did you have a painful or scary medical treatment when you were very sick or badly injured?</inlineHelpText>
        <label>12. Painful medical treatment</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q13_Forced_sex__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Were you ever forced to have sex with someone when you didn’t want to?</inlineHelpText>
        <label>13. Forced to have sex+</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q14_Died__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>Has anyone close to you died?</inlineHelpText>
        <label>14. Has anyone close to you died?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_SelfRpt_Q15_Anything_else__c</fullName>
        <globalPicklist>YesNo</globalPicklist>
        <inlineHelpText>OTHER than the things described above, has ANYTHING ELSE ever happened to you that was REALLY SCARY OR UPSETTING?</inlineHelpText>
        <label>15. Other scary dangerous violent</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UC_Trauma_History_Profile_Summary__c</fullName>
        <label>Trauma History Profile Summary</label>
        <type>TextArea</type>
    </fields>
    <label>aUCLA_PTSD_DSM_V</label>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>aUCLA_PTSD_DSM_V Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aUCLA_PTSD_DSM_V</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>